# actix-backend

./: Cargo.toml  README.md
migrations/: 20260213214759_user.down.sql  20260213214759_user.up.sql  20260213214823_otp_codes.down.sql  20260213214823_otp_codes.up.sql
src/: main.rs
src/config/: config.rs  crypto.rs  mod.rs  routes.rs
src/controller/: handler.rs
src/controllers/: auth.rs  mfa.rs  mod.rs  oauth.rs  sessions.rs  user_controller.rs  users.rs
src/middleware/: auth.rs
src/models/: mod.rs  oauth.rs  otp_codes.rs  session.rs  user.rs
src/service/: email_service.rs  mod.rs  user_service.rs
src/services/: mod.rs
src/utils/: errors.rs  jwt.rs  mod.rs  password.rs  totp.rs
templates/: otp_email.html
